@@ -10,12 +10,13 @@ package org.elasticsearch.search.aggregations.pipeline;
 
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.search.DocValueFormat;
+import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregation;
-import org.elasticsearch.search.aggregations.metrics.InternalMax;
 import org.elasticsearch.search.aggregations.metrics.InternalNumericMetricsAggregation;
+import org.elasticsearch.search.aggregations.metrics.Max;
 import org.elasticsearch.search.aggregations.metrics.Percentile;
+import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.Arrays;
@@ -24,7 +25,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class InternalPercentilesBucket extends InternalNumericMetricsAggregation.MultiValue implements PercentilesBucket {
     private double[] percentiles;
@@ -33,14 +33,23 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
 
     private final transient Map<Double, Double> percentileLookups = new HashMap<>();
 
-    InternalPercentilesBucket(String name, double[] percents, double[] percentiles, boolean keyed,
-                                     DocValueFormat formatter, Map<String, Object> metadata) {
-        super(name, metadata);
+    InternalPercentilesBucket(
+        String name,
+        double[] percents,
+        double[] percentiles,
+        boolean keyed,
+        DocValueFormat formatter,
+        Map<String, Object> metadata
+    ) {
+        super(name, formatter, metadata);
         if ((percentiles.length == percents.length) == false) {
-            throw new IllegalArgumentException("The number of provided percents and percentiles didn't match. percents: "
-                    + Arrays.toString(percents) + ", percentiles: " + Arrays.toString(percentiles));
+            throw new IllegalArgumentException(
+                "The number of provided percents and percentiles didn't match. percents: "
+                    + Arrays.toString(percents)
+                    + ", percentiles: "
+                    + Arrays.toString(percentiles)
+            );
         }
-        this.format = formatter;
         this.percentiles = percentiles;
         this.percents = percents;
         this.keyed = keyed;
@@ -58,7 +67,6 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
      */
     public InternalPercentilesBucket(StreamInput in) throws IOException {
         super(in);
-        format = in.readNamedWriteable(DocValueFormat.class);
         percentiles = in.readDoubleArray();
         percents = in.readDoubleArray();
         keyed = in.readBoolean();
@@ -83,8 +91,13 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
     public double percentile(double percent) throws IllegalArgumentException {
         Double percentile = percentileLookups.get(percent);
         if (percentile == null) {
-            throw new IllegalArgumentException("Percent requested [" + String.valueOf(percent) + "] was not" +
-                    " one of the computed percentiles.  Available keys are: " + Arrays.toString(percents));
+            throw new IllegalArgumentException(
+                "Percent requested ["
+                    + String.valueOf(percent)
+                    + "] was not"
+                    + " one of the computed percentiles.  Available keys are: "
+                    + Arrays.toString(percents)
+            );
         }
         return percentile;
     }
@@ -110,11 +123,11 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
 
     @Override
     public Iterable<String> valueNames() {
-        return Arrays.stream(percents).mapToObj(d -> String.valueOf(d)).collect(Collectors.toList());
+        return Arrays.stream(percents).mapToObj(d -> String.valueOf(d)).toList();
     }
 
     @Override
-    public InternalMax reduce(List<InternalAggregation> aggregations, ReduceContext reduceContext) {
+    public Max reduce(List<InternalAggregation> aggregations, AggregationReduceContext reduceContext) {
         throw new UnsupportedOperationException("Not supported");
     }
 
