@@ -7,23 +7,21 @@
 
 package org.elasticsearch.xpack.watcher.rest.action;
 
-import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.core.RestApiVersion;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.lucene.uid.Versions;
-import org.elasticsearch.common.util.set.Sets;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.protocol.xpack.watcher.PutWatchRequest;
 import org.elasticsearch.protocol.xpack.watcher.PutWatchResponse;
 import org.elasticsearch.rest.BaseRestHandler;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
+import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
-import org.elasticsearch.rest.RestRequestFilter;
+import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.watcher.transport.actions.put.PutWatchAction;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -37,10 +35,8 @@ public class RestPutWatchAction extends BaseRestHandler implements RestRequestFi
     @Override
     public List<Route> routes() {
         return List.of(
-            Route.builder(POST, "/_watcher/watch/{id}")
-                .replaces(POST, "/_xpack/watcher/watch/{id}", RestApiVersion.V_7).build(),
-            Route.builder(PUT, "/_watcher/watch/{id}")
-                .replaces(PUT, "/_xpack/watcher/watch/{id}", RestApiVersion.V_7).build()
+            Route.builder(POST, "/_watcher/watch/{id}").replaces(POST, "/_xpack/watcher/watch/{id}", RestApiVersion.V_7).build(),
+            Route.builder(PUT, "/_watcher/watch/{id}").replaces(PUT, "/_xpack/watcher/watch/{id}", RestApiVersion.V_7).build()
         );
     }
 
@@ -51,8 +47,7 @@ public class RestPutWatchAction extends BaseRestHandler implements RestRequestFi
 
     @Override
     protected RestChannelConsumer prepareRequest(final RestRequest request, NodeClient client) {
-        PutWatchRequest putWatchRequest =
-                new PutWatchRequest(request.param("id"), request.content(), request.getXContentType());
+        PutWatchRequest putWatchRequest = new PutWatchRequest(request.param("id"), request.content(), request.getXContentType());
         putWatchRequest.setVersion(request.paramAsLong("version", Versions.MATCH_ANY));
         putWatchRequest.setIfSeqNo(request.paramAsLong("if_seq_no", putWatchRequest.getIfSeqNo()));
         putWatchRequest.setIfPrimaryTerm(request.paramAsLong("if_primary_term", putWatchRequest.getIfPrimaryTerm()));
@@ -67,9 +62,12 @@ public class RestPutWatchAction extends BaseRestHandler implements RestRequestFi
         });
     }
 
-    private static final Set<String> FILTERED_FIELDS = Collections.unmodifiableSet(
-            Sets.newHashSet("input.http.request.auth.basic.password", "input.chain.inputs.*.http.request.auth.basic.password",
-                    "actions.*.email.attachments.*.reporting.auth.basic.password", "actions.*.webhook.auth.basic.password"));
+    private static final Set<String> FILTERED_FIELDS = Set.of(
+        "input.http.request.auth.basic.password",
+        "input.chain.inputs.*.http.request.auth.basic.password",
+        "actions.*.email.attachments.*.reporting.auth.basic.password",
+        "actions.*.webhook.auth.basic.password"
+    );
 
     @Override
     public Set<String> getFilteredFields() {
